✨ Add new controller to validate recovery ticket
