# main.go
@@ -13,8 +13,9 @@ func main() {
 
 	r.POST("/api/login", controllers.Login())
 	r.POST("/api/register", controllers.Register())
-	r.POST("/api/recovery", controllers.OpenAccountRecovery())
-	r.POST("/api/chall-recovery", controllers.UpdateByRecovery())
+	r.POST("/api/recovery/create", controllers.OpenAccountRecovery())
+	r.POST("/api/recovery/chall", controllers.UpdateByRecovery())
+	r.POST("/api/recovery/validate", controllers.CheckTicketRecovery())
 
 	if err := r.Run(":9080"); err != nil {
 		panic(err)
